<resources>
    <string name="app_name">DemoEventsBooking</string>
    <string name="all_events_text">Discover Events</string>
    <string name="wait_fetching_events">Wait Fetching events…</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="retry">RETRY</string>
    <string name="no_events_available_text">No Events Available</string>
    <string name="no_network_text">Network not available</string>
    <string name="online_text">Online</string>
    <string name="lucknow_text">Lucknow</string>
    <string name="delhi_text">Delhi</string>
    <string name="mumbai_text">Mumbai</string>
    <string name="pune_text">Pune</string>
    <string name="kolkata_text">Kolkata</string>
</resources>